--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack server -open"
+    "start": "npm run dev",
+    "dev":"webpack serve --config ./config/webpack.config.dev.js",
+    "build":"webpack --config ./config/webpack.config.prod.js"
   },
   "author": "",
   "license": "ISC",
