--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.2.5",
     "bable-loader": "0.0.1-security",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.2.1",
     "eslint": "^8.25.0",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
